Working on the page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Michael Canaran</title>
 </head>
 <body>
-    <h1>Welcome to my pages!</h1>
+    <h1>Michael Canaran</h1>
+    
 </body>
 </html>
