--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 </head>
 <body>
     <h1>Michael Canaran</h1>
+    <p>An aspiring full stack developer, with a passion for recreational and scientific programming.</p>
     
+    <hr noshade>
+
+    <h2>Education</h2>
+    <td>Ryerson University 2018-2023<ul>
+        <li><strong>B.Eng Computer Engineering</strong> with a concentration in <strong>Software Engineering</strong> and a <strong>Math</strong> minor</li>
+    </ul></td>
+
+    <hr noshade>
+
+    <h2>Skills</h2>
+    <ul>
+        <li>Python</li>
+        <li>JavaScript</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>React</li>
+        <li>Angular</li>
+        <li>Node</li>
+        <li>Django</li>
+    </ul>
+
 </body>
 </html>
