--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <td>Ryerson University 2018-2023<ul>
         <li><strong>B.Eng Computer Engineering</strong> with a concentration in <strong>Software Engineering</strong> and a <strong>Math</strong> minor</li>
     </ul></td>
-
+    
     <hr noshade>
 
     <h2>Skills</h2>
+    <p><strong>Technical Skills</strong></p>
     <ul>
         <li>Python</li>
         <li>JavaScript</li>
