--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Canaran</title>
 </head>
-<body style="background-color: #cbeaed;">
+<body style="background-color: #c7e2b2;">
     <h1>Michael Canaran</h1>
     <p>An aspiring full stack developer, with a passion for recreational and scientific programming.</p>
     
