--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Canaran</title>
+    <style>
+        body{
+            background-color: #d2ecf9;
+        }
+        hr{
+            background-color: transparent;
+            border-style: none;
+            border-top-style: dotted;
+            border-color: #1f5f8b;
+            border-width: 5px;
+            width: 10%;
+        }
+    </style>
 </head>
-<body style="background-color: #d2ecf9;">
+<body>
     <h1>Michael Canaran</h1>
     <p>An aspiring full stack developer, with a passion for recreational and scientific programming.</p>
     
