--- a/index.html
+++ b/index.html
@@ -4,19 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Canaran</title>
-    <style>
-        body{
-            background-color: #d2ecf9;
-        }
-        hr{
-            background-color: transparent;
-            border-style: none;
-            border-top-style: dotted;
-            border-color: #1f5f8b;
-            border-width: 5px;
-            width: 10%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Michael Canaran</h1>
