--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <hr noshade>
 
     <h2>Skills</h2>
-    <p><strong>Technical Skills</strong></p>
+    <h3>Technical Skills</h3>
     <ul>
         <li>Python</li>
         <li>JavaScript</li>
