Added more CSS functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <h2>Education</h2>
     <td>Ryerson University 2018-2023<ul>
-        <li><strong>B.Eng Computer Engineering</strong> with a concentration in <strong>Software Engineering</strong> and a <strong>Math</strong> minor</li>
+        <li><strong style="color:#253b6e">B.Eng Computer Engineering</strong> with a concentration in <strong style="color:#253b6e">Software Engineering</strong> and a <strong style="color:#253b6e">Math</strong> minor</li>
     </ul></td>
     
     <hr noshade>
