--- a/index.html
+++ b/index.html
@@ -3,34 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Canaran</title>
     <link rel="stylesheet" href="css/styles.css">
+    <title>Michael's site</title>
 </head>
 <body>
-    <h1>Michael Canaran</h1>
-    <p>An aspiring full stack developer, with a passion for recreational and scientific programming.</p>
-    
-    <hr noshade>
-
-    <h2>Education</h2>
-    <td>Ryerson University 2018-2023<ul>
-        <li><strong style="color:#253b6e">B.Eng Computer Engineering</strong> with a concentration in <strong style="color:#253b6e">Software Engineering</strong> and a <strong style="color:#253b6e">Math</strong> minor</li>
-    </ul></td>
-    
-    <hr noshade>
-
-    <h2>Skills</h2>
-    <h3>Technical Skills</h3>
-    <ul>
-        <li>Python</li>
-        <li>JavaScript</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>React</li>
-        <li>Angular</li>
-        <li>Node</li>
-        <li>Django</li>
-    </ul>
-
 </body>
 </html>
