--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
     <title>Michael Canaran</title>
 </head>
 <body>
+    <div class="">
+        <h1>I'm Michael.</h1>
+        <p>a programmer.</p>
+    </div>
 </body>
 </html>
