--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Michael Canaran</title>
 </head>
 <body>
-    <div class="">
+    <div class="text">
         <h1>I'm Michael.</h1>
         <p>a programmer.</p>
     </div>
