--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="text">
         <h1>I'm Michael.</h1>
         <p>a programmer.</p>
+        <p>Please hire me!</p>
+        <a href="https://www.linkedin.com/in/michael-canaran/">My LinkedIn</a>
     </div>
 </body>
 </html>
