--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <title>Michael Canaran</title>
 </head>
 <body>
-    <div class="text">
+    <div class="top-container">
         <h1>I'm Michael.</h1>
         <p>a programmer.</p>
         <p>Please hire me!</p>
         <a href="https://www.linkedin.com/in/michael-canaran/">My LinkedIn</a>
+    </div>
+
+    <div class="middle-container">
+        
+    </div>
+
+    <div class="bottom-container">
+
     </div>
 </body>
 </html>
