--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <div class="top-container">
+        <img src="images/cloud.png" alt="cloud-img">
         <h1>I'm Michael.</h1>
         <p>a programmer.</p>
-        <p>Please hire me!</p>
-        <a href="https://www.linkedin.com/in/michael-canaran/">My LinkedIn</a>
+        <img src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
     </div>
 
     <div class="middle-container">
-        
+
     </div>
 
     <div class="bottom-container">
