Adding more info

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
         <h1>I'm Michael.</h1>
         <p>a programmer.</p>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img src="images/mountain.png" alt="mountain-img">
+        <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
-
+    <hr>
     <div class="middle-container">
-
+        <h2>Hi there!</h2>
     </div>
-
+    <hr>
     <div class="bottom-container">
-
+        
     </div>
+      
 </body>
 </html>
