--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Recursive&family=Roboto&display=swap" rel="stylesheet">
 
-    <title>Michael Canaran</title>
+    <title>Michael's site</title>
 </head>
 <body>
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-        <h1>I'm Michael.</h1>
-        <p>a programmer.</p>
+        <div class="intro">
+            <h1>I'm Michael.</h1>
+            <p>a programmer.</p>
+        </div>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
