--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <div class="intro">
             <h1>I'm Michael.</h1>
-            <p>a programmer.</p>
+            <h2>a programmer.</h2>
         </div>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img class="mountain" src="images/mountain.png" alt="mountain-img">
