--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
-    <hr>
+    <hr class="first-break">
     <div class="middle-container">
         <h2>Bio</h2>
         <p>I am an aspiring full stack developer and a Software Engineering student.</p> <p>I love learning new skills and applying them to impactful projects.</p>
