--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>Bio</h2>
         <p>I am an aspiring full stack developer and a Software Engineering student.</p> <p>I love learning new skills and applying them to impactful projects.</p>
         <hr>
-        <h3>Skills:</h3>
+        <h3>Skills</h3>
         <img class="keyboard" src="images/keyboard.png" alt="keyboard-img">
         <p>Since I was young, I've been drawn to the infinite entertainment and utility value of computers.</p> 
         <p>Throughout the years and through several side projects, I have gained in-depth experience in full stack development and am still eager to learn more.</p>
